--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ironman-tracker",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://localhost:3001",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,11 +11,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
+    "express-http-proxy": "^1.6.3",
+    "http-proxy-middleware": "^2.0.6",
+    "mitt": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "safe-buffer": "^5.2.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/express-http-proxy": "^1.6.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
