--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
