--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ironman-tracker",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,11 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2",
-    "express-http-proxy": "^1.6.3",
     "http-proxy-middleware": "^2.0.6",
     "mitt": "^3.0.0",
+    "osrs-json-hiscores": "^2.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
