--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "osrs-json-hiscores": "^2.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "safe-buffer": "^5.2.1"
   },
